--- a/index.html
+++ b/index.html
@@ -521,9 +521,9 @@
 
 		<script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
-		<script src="js/jquery-scrollto.js"></script>
+		<script src="./js/jquery-scrollto.js"></script>
 
-		<script src="js/bootstrap.js"></script>
+		<script src="./js/bootstrap.js"></script>
 
 
 
