--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 		<meta name="viewport" content="width=device-width">
 
 		<!--Style Sheet link-->
-		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="./css/responsive.css">
-		<link rel="stylesheet" href="./swiper/css/swiper.min.css">
 
 		<!--Google Fonts link-->
 		<style> @import url('https://fonts.googleapis.com/css?family=Arapey|Maven+Pro'); </style>
