--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>Xiao Peng's Page</title>
 		<meta name="viewport" content="width=device-width">
 
-		<!--Style Sheet <link rel="stylesheet" type="text/css" href="css/style.css">link-->
+		<!--Style Sheet link-->
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		
 		<link rel="stylesheet" type="text/css" href="./css/responsive.css">
 
