--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<!--Style Sheet link-->
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		<link rel="stylesheet" type="text/css" href="./css/responsive.css">
-		<link rel="stylesheet" href="./swiper/css/swiper.min.css">
 
 		<!--Google Fonts link-->
 		<style> @import url('https://fonts.googleapis.com/css?family=Arapey|Maven+Pro'); </style>
@@ -518,6 +517,8 @@
 			</div>
 		</div>
 
+		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?LR-verbose&snipver=1&LiveTest=1"></' + 'script>')</script>
+		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35730/livereload.js?LR-verbose&snipver=1&LiveTest=1"></' + 'script>')</script>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
