function added for narbar drawer
click outside the nav drawer

--- a/index.html
+++ b/index.html
@@ -509,5 +509,11 @@
 
 		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/bootstrap.js"></script>
 
+		<script type="text/javascript">
+
+			
+
+		</script>
+		
 		</body>
 </html>
