social media icons added to drawer

--- a/index.html
+++ b/index.html
@@ -85,9 +85,21 @@
 								</li>
 							</span>
 
-							<li class="logo" style="display: block; padding: 0 24px; padding-bottom: 44px;">
+							<li class="social-logo center" style="padding: 34px 0;">
+								<div class="mini-media">
+									<a class="media-link" href="https://www.linkedin.com/in/xiao-peng/" target="_blank">
+										<img src="material/linkedIn_logo.png">
+									</a>
+								</div>
 								
+								<div class="mini-media">
+									<a class="media-link" href="https://github.com/xiao-peng1006" target="_blank">
+										<img src="material/github_logo.png">
+									</a>
+								</div>
 							</li>
+
+
 						</ul>
 					</div>
 					
@@ -514,6 +526,6 @@
 			
 
 		</script>
-		
+
 		</body>
 </html>
