scroll function fixed
scroll function fixed, both pc and mobile side

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 								<div class="nav">
 									<ul class="p-nav">
-										<div id="my-work" class="sliding-middle-out">
+										<div data-id="my-work" class="sliding-middle-out">
 											<li class="half-offset-left half-offset-right">
 												<a class="my-work nav-item font-heading-default" href="#my-work">
 													<span class="font-body">My Work</span>
@@ -40,7 +40,7 @@
 										</div>
 
 
-										<div id="my-background" class="sliding-middle-out">
+										<div data-id="my-background" class="sliding-middle-out">
 											<li class="half-offset-left half-offset-right">
 												<a class="my-background nav-item font-heading-default" href="#my-background">
 													<span class="font-body">My Background</span>
@@ -74,13 +74,13 @@
 					<div class="navbar-drawer p-nav-drawer">
 						<ul id="navbar-drawer-list">
 							<span>
-								<li class="sliding-middle-out">
+								<li data-id="my-work" class="sliding-middle-out">
 									<a class="navbar-drawer-item font-body" href="#my-work">My Work</a>
 								</li>
 							</span>
 
 							<span>
-								<li class="sliding-middle-out">
+								<li data-id="my-background" class="sliding-middle-out">
 									<a class="navbar-drawer-item font-body" href="#my-background">My Background</a>
 								</li>
 							</span>
@@ -184,7 +184,7 @@
 												<div class="contact-info">
 													<ul class="p-footer">
 														<li class="half-offset-left half-offset-right">
-															<p id="my-work-section">&nbsp;</p>
+															<p>&nbsp;</p>
 
 															<div class="mini-media">
 																<a>
@@ -198,7 +198,7 @@
 														</li>
 
 
-														<li class="half-offset-left half-offset-right">
+														<li id="my-work-section" class="half-offset-left half-offset-right">
 															
 															<div class="mini-media">
 																<a>
@@ -515,7 +515,9 @@
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
-		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/main.js"></script>
+		<!-- <script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/main.js"></script> -->
+
+		<script src="js/main.js"></script>
 
 		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/jquery-scrollto.js"></script>
 
