removed hover action on item in nav drawer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 								<div class="nav">
 									<ul class="p-nav">
-										<div data-id="my-work" class="sliding-middle-out">
+										<div data-id="my-work" class="sliding-middle-out hover-action">
 											<li class="half-offset-left half-offset-right">
 												<a class="my-work nav-item font-heading-default" href="#my-work">
 													<span class="font-body">My Work</span>
@@ -40,7 +40,7 @@
 										</div>
 
 
-										<div data-id="my-background" class="sliding-middle-out">
+										<div data-id="my-background" class="sliding-middle-out hover-action">
 											<li class="half-offset-left half-offset-right">
 												<a class="my-background nav-item font-heading-default" href="#my-background">
 													<span class="font-body">My Background</span>
