--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 
-					<div id="navbar-drawer-mask""></div>
+					<div id = "navbar-drawer-mask""></div>
 
 					<div class="navbar-drawer p-nav-drawer">
 						<ul id="navbar-drawer-list">
@@ -272,13 +272,8 @@
 																	<p>&nbsp;</p>
 
 																	<p>
-																		
-																	</p>
-																	<p>&nbsp;</p>
-
-																	<p>
 																		Skills:
-																		<em>HTML5, CSS3, JavaScript, React, SASS, Webpack</em>
+																		<em>HTML5, CSS3, JavaScript, React, Redux, SASS, Webpack, Mongodb, Express</em>
 																	</p>
 																	<p>&nbsp;</p>
 
@@ -287,8 +282,6 @@
 																			<em>https://github.com/xiao-peng1006/react-project</em>
 																		</a>
 																	</p>
-
-																	<p id="my-background-section">&nbsp;</p>
 
 																</h6>
 															</div>
@@ -567,15 +560,11 @@
 			</div>
 		</div>
 
-		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?LR-verbose&snipver=1&LiveTest=1"></' + 'script>')</script>
-
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
 		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/main.js"></script>
 
 		<!-- <script src="js/main.js"></script> -->
-
-		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/jquery-scrollto.js"></script>
 
 		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/bootstrap.js"></script>
 
