--- a/index.html
+++ b/index.html
@@ -562,9 +562,9 @@
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
-		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/main.js"></script>
+		<!-- <script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/main.js"></script> -->
 
-		<!-- <script src="js/main.js"></script> -->
+		<script src="./js/main.js"></script>
 
 		<script src="https://rawgit.com/xiao-peng1006/xiao-peng1006.github.io/master/js/bootstrap.js"></script>
 
